# wanda-modern

./: .gitignore  INSTALL.md  benchmark_compressed_inference.py  compress_macko_modal.py  compress_model_custom.py  eval_compressed_ppl.py  eval_pruned_model.py  inspect_model_shapes.py  main.py  pyproject.toml  test_modal.py
docs/: CHANGES.md  MACKO_COMPRESSION.md  MACKO_MODAL.md  MACKO_MODAL_DEBUG.md  MODAL_TEST.md  PRUNE_CPU_ONLY.md  PULL_REQUEST.md
lib/: data.py  eval.py  prune.py  prune_opt.py
scripts/: download_from_modal.sh
tests/: check_model_memory.py  compare_models.py  test_modal.py  use_original_model.py  use_pruned_model.py
